fixing overflows

--- a/css/index.css
+++ b/css/index.css
@@ -127,7 +127,6 @@
   
   /* Evitamos problemas con los SVG */
   svg {
-    width: 100%;
     display: block;
     fill: currentColor;
   }
